--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.11",
+    "gsap": "^3.13.0",
     "i18next": "^25.4.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.541.0",
